# anime-oscilloscope

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  playwright.config.ts  render.yaml
apps/api/: app.py  pyproject.toml
apps/api/src/anime_oscilloscope/: __init__.py  catalog.py  config.py  database.py  demo_catalog.py  demo_history.py  history.py  main.py  mapping_review.py  matching.py  policies.py  quality.py  rate_limit.py  sampling.py  schemas.py  scoring.py  semantic.py  sync_store.py
apps/api/src/anime_oscilloscope/connectors/: __init__.py  bangumi.py  base.py  mal.py
apps/api/src/anime_oscilloscope/domain/: __init__.py  mapping.py  source.py
apps/api/src/anime_oscilloscope/jobs/: __init__.py  apply_migration.py  backfill_catalog.py  backfill_season.py  bulk_match_mal.py  discover_bangumi.py  evaluate_semantic.py  match_mal.py  sync_catalog.py
apps/api/tests/: test_backfill_season.py  test_bangumi_connector.py  test_catalog_api.py  test_catalog_backfill.py  test_config.py  test_database.py  test_health.py  test_history.py  test_mal_connector.py  test_matching.py  test_policies.py  test_rate_limit.py  test_sampling.py  test_scoring.py  test_semantic.py  test_sync_store.py
apps/api/tests/fixtures/: semantic_queries.json
apps/api/tests/fixtures/bangumi/: episodes.json  search_subjects.json  subject.json
apps/api/tests/fixtures/mal/: anime_details.json  anime_search.json  season.json
docs/: ai-evaluation.md  architecture.md  bilibili-import.md  browser-support.md  codex-collaboration.md  (+7 more)
(+48 files in other folders)
