[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-oscilloscope-api"
version = "0.8.3"
description = "FastAPI service for the Anime Oscilloscope platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1.0",
  "httpx2>=2.5,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "pytest-cov>=6.2,<7.0",
  "ruff>=0.12,<1.0",
]
ai = [
  "fastembed>=0.7,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
